# docs/swagger.json
@@ -9,6 +9,46 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
+        "/janus/custSavingInfoJanus/": {
+            "post": {
+                "description": "Loan info",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Janus"
+                ],
+                "summary": "Loan info",
+                "parameters": [
+                    {
+                        "description": "Search",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/route.Acc"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/route.CustSavingInfo"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/route.Errror"
+                        }
+                    }
+                }
+            }
+        },
         "/janus/customerSavings/": {
             "post": {
                 "description": "Customer Savings List",
@@ -38,6 +78,86 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/route.CustSavingsListss"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/route.Errror"
+                        }
+                    }
+                }
+            }
+        },
+        "/janus/generateColshit/": {
+            "post": {
+                "description": "Loan info",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Janus"
+                ],
+                "summary": "Loan info",
+                "parameters": [
+                    {
+                        "description": "Search",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/route.Use"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/route.GenerateCol"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/route.Errror"
+                        }
+                    }
+                }
+            }
+        },
+        "/janus/loanInfoJanus/": {
+            "post": {
+                "description": "Loan info",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Janus"
+                ],
+                "summary": "Loan info",
+                "parameters": [
+                    {
+                        "description": "Search",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/route.Acc"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/route.LaonInfo"
                         }
                     },
                     "400": {
@@ -580,28 +700,65 @@
             }
         },
         "route.AmortList": {
-            "type": "object"
-        },
-        "route.Charges": {
             "type": "object",
             "properties": {
                 "acc": {
                     "type": "string"
                 },
-                "charges": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/route.Charges"
-                    }
+                "carVal": {
+                    "type": "number"
+                },
+                "dnum": {
+                    "type": "integer"
+                },
+                "dueDate": {
+                    "type": "string"
+                },
+                "endBal": {
+                    "type": "number"
+                },
+                "endInt": {
+                    "type": "number"
+                },
+                "endOth": {
+                    "type": "number"
+                },
+                "instFlag": {
+                    "type": "integer"
+                },
+                "instPd": {
+                    "type": "number"
+                },
+                "intr": {
+                    "type": "number"
+                },
+                "oth": {
+                    "type": "number"
+                },
+                "penPd": {
+                    "type": "number"
+                },
+                "penalty": {
+                    "type": "number"
+                },
+                "pledgeAmort": {
+                    "type": "number"
+                },
+                "prin": {
+                    "type": "number"
+                },
+                "servFee": {
+                    "type": "number"
+                },
+                "upInt": {
+                    "type": "number"
                 }
             }
         },
         "route.CustSavingInfo": {
             "type": "object",
             "properties": {
-                "acc": {
-                    "type": "string"
-                },
+                "acc": {},
                 "accDesc": {
                     "type": "string"
                 },
@@ -693,10 +850,10 @@
                     "type": "integer"
                 },
                 "balInt": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "balPrin": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "centerCode": {
                     "type": "integer"
@@ -723,7 +880,7 @@
                     "type": "string"
                 },
                 "dueInt": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "duePrin": {
                     "type": "number"
@@ -732,19 +889,19 @@
                     "type": "integer"
                 },
                 "ibalInt": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "ibalPrin": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "iiid": {
                     "type": "integer"
                 },
                 "interest": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "loanBal": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "manCode": {
                     "type": "integer"
@@ -756,7 +913,7 @@
                     "type": "number"
                 },
                 "principal": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "saveBal": {
                     "type": "number"
@@ -784,7 +941,7 @@
                 },
                 "uuid": {},
                 "waiveInt": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "withdraw": {
                     "type": "number"
@@ -923,7 +1080,7 @@
                     "type": "integer"
                 },
                 "amortcondvalue": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "annumdiv": {
                     "type": "integer"
@@ -935,11 +1092,9 @@
                     "type": "string"
                 },
                 "balance": {
-                    "type": "integer"
+                    "type": "number"
                 },
-                "charges": {
-                    "$ref": "#/definitions/route.Charges"
-                },
+                "charges": {},
                 "cid": {
                     "type": "integer"
                 },
@@ -950,7 +1105,7 @@
                     "type": "integer"
                 },
                 "conintrate": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "cycle": {
                     "type": "integer"
@@ -959,7 +1114,7 @@
                     "type": "string"
                 },
                 "discounted": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "domaturity": {
                     "type": "string"
@@ -974,10 +1129,10 @@
                     "type": "integer"
                 },
                 "interest": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "intr": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "isLumpsum": {
                     "type": "integer"
@@ -987,22 +1142,22 @@
                 },
                 "loanID": {},
                 "netproceed": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "oth": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "others": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "penalty": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "prin": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "principal": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "proff": {
                     "type": "integer"
@@ -1015,7 +1170,7 @@
                     "type": "integer"
                 },
                 "waivedint": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "weekspaid": {
                     "type": "integer"
